--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,8 @@
       flex-direction: column;
       align-items: center;
       width: 60%;
-      .add-new-item-button {
-        margin-top: 20px;
+      .add-new-task-button {
+        margin-top: 15px;
         width: 35%;
       }
     }
@@ -28,5 +28,8 @@
   }
   .todo-list-container {
     width: 80%;
+  }
+  .edit-task-wrapper {
+    display: flex;
   }
 }
